hw03_rest_crud/deployments/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service-deployment
spec:
  selector:
    matchLabels:
      app: users-service
  replicas: 3
  template:
    metadata:
      labels:
        app: users-service
    spec:
      containers:
      - name: users-service
        image: julinserg/users_service_docker_image:latest
        ports:
        - containerPort: 8080
