hw03_rest_crud/deployments/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service-service
spec:
  selector:
    app: users-service
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
